<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_identification">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.misandroid.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_signal_map"
        android:name="com.example.misandroid.ui.signal_map.SignalMapFragment"
        android:label="@string/title_signal_map"
        tools:layout="@layout/fragment_signal_map" />

    <fragment
        android:id="@+id/navigation_signals"
        android:name="com.example.misandroid.ui.signals.SignalsFragment"
        android:label="@string/title_signals"
        tools:layout="@layout/fragment_signals" />

    <fragment
        android:id="@+id/navigation_identification"
        android:name="com.example.misandroid.ui.identification.IdentificationFragment"
        android:label="@string/title_identification"
        tools:layout="@layout/fragment_identification" />
</navigation>