<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signal_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/dialog_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="7dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="129dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <EditText
                    android:id="@+id/signal1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:hint="@string/wiliboxas1"
                    android:inputType="number|textNoSuggestions|textVisiblePassword"
                    android:lines="1"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/signal2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:hint="@string/wiliboxas2"
                    android:inputType="number|textNoSuggestions|textVisiblePassword"
                    android:lines="1"
                    android:maxLength="2"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/signal3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:hint="@string/wiliboxas3"
                    android:inputType="number|textNoSuggestions|textVisiblePassword"
                    android:lines="1"
                    android:maxLength="2"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="15dp">
                <Button
                    android:id="@+id/dialog_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="Add"
                    style="?android:attr/buttonBarButtonStyle" />
                <Button
                    android:id="@+id/dialog_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="Close"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>